fix: Do not show tooltips when target expanded (#410)
- Do not show tooltip if attached to expandable content that is expanded
- Use srgb color space for monochrome color mixes (fixes some bugs with Windows)
- Hoist tag tooltips (tag tooltips could previously be clipped if the tag was exessively large with no spaces)

Fixes: #405

--- a/src/helpers/themes/theming.css
+++ b/src/helpers/themes/theming.css
@@ -107,9 +107,9 @@
   );
 
   --oe-panel-color: var(--oe-background-color);
-  --oe-panel-color-light: color-mix(in oklch, var(--oe-panel-color), white 10%);
-  --oe-panel-color-dark: color-mix(in oklch, var(--oe-panel-color), black 3%);
-  --oe-panel-color-darker: color-mix(in oklch, var(--oe-panel-color), black 10%);
+  --oe-panel-color-light: color-mix(in srgb, var(--oe-panel-color), white 10%);
+  --oe-panel-color-dark: color-mix(in srgb, var(--oe-panel-color), black 3%);
+  --oe-panel-color-darker: color-mix(in srgb, var(--oe-panel-color), black 10%);
 
   --oe-undecided-color: var(--oe-panel-color);
   --oe-box-shadow: 1px 1px 1px var(--oe-secondary-color);
